Fixed the graph title overlap issue.
Updated CSS in graph-title-sk to prevent graph titles from overlapping.

Screenshot: https://screenshot.googleplex.com/6RzGkZ5nrEXTyWD

Bug: b/412663668

Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/985106
Commit-Queue: Wenbin Zhang <wenbinzhang@google.com>
Auto-Submit: Maggie Dong <jiaxindong@google.com>

--- a/perf/modules/graph-title-sk/graph-title-sk.scss
+++ b/perf/modules/graph-title-sk/graph-title-sk.scss
@@ -6,12 +6,12 @@
   }
 
   .column {
-    flex: 0 0 auto;
+    flex: auto auto auto;
     display: inline-block;
     margin-right: 10px;
     margin-bottom: 10px;
     min-width: 75px;
-    max-width: 300px;
+    max-width: 600px;
   }
 
   .param {
